--- a/platformio.ini
+++ b/platformio.ini
@@ -12,9 +12,31 @@
 platform = espressif32
 board = esp32-s3-devkitm-1
 framework = arduino
+
+; ===== LittleFS Configuration =====
+board_build.filesystem = littlefs
+
+; ===== Pin Configuration (can be overridden per-environment) =====
+build_flags = 
+    -D LED_PIN=2
+    -D RESET_BUTTON_PIN=15
+    -D AMPLIFIER_PIN=4
+    -D VOLTAGE_SENSE_PIN=1
+    -D CORE_DEBUG_LEVEL=2
+    -D CONFIG_ARDUHAL_LOG_COLORS=1
+
+; ===== Library Dependencies =====
 lib_deps = 
 	links2004/WebSockets@^2.7.2
 	bblanchon/ArduinoJson@^7.4.2
 	knolleary/PubSubClient@^2.8
+
+; ===== Serial Monitor =====
 monitor_speed = 9600
 ;monitor_filters= direct, esp32_exception_decoder
+
+; ===== Upload Settings =====
+; upload_speed = 921600
+
+; ===== Partition Table (optional - use if needing more space) =====
+; board_build.partitions = huge_app.csv
