--- a/platformio.ini
+++ b/platformio.ini
@@ -17,7 +17,7 @@ framework = arduino
 board_build.filesystem = littlefs
 
 ; ===== Pin Configuration (can be overridden per-environment) =====
-build_flags = 
+build_flags =
     -D LED_PIN=2
     -D RESET_BUTTON_PIN=15
     -D AMPLIFIER_PIN=4
@@ -27,7 +27,7 @@ build_flags =
     -Os
 
 ; ===== Library Dependencies =====
-lib_deps = 
+lib_deps =
 	links2004/WebSockets@^2.7.2
 	bblanchon/ArduinoJson@^7.4.2
 	knolleary/PubSubClient@^2.8
@@ -41,6 +41,10 @@ monitor_speed = 9600
 
 ; ===== Partition Table (optional - use if needing more space) =====
 ; board_build.partitions = huge_app.csv
+
+; ===== Test Configuration =====
+; Ignore all unit tests for ESP32 (tests are designed for native environment)
+test_ignore = *
 
 ; ===== Native Testing Environment =====
 [env:native]
