Add buzzer functionality and configuration options
- Introduced buzzer state management with enable/disable and volume control.
- Updated platformio.ini to define BUZZER_PIN.
- Enhanced GUI to include buzzer settings and controls.
- Implemented MQTT support for buzzer state and volume adjustments.
- Added WebSocket functionality for real-time buzzer state updates.
- Updated RELEASE_NOTES.md to reflect these changes.

--- a/platformio.ini
+++ b/platformio.ini
@@ -25,6 +25,7 @@ build_flags =
     -D RESET_BUTTON_PIN=15
     -D AMPLIFIER_PIN=4
     -D VOLTAGE_SENSE_PIN=1
+    -D BUZZER_PIN=8
     -D CORE_DEBUG_LEVEL=2
     -D CONFIG_ARDUHAL_LOG_COLORS=1
     -Os
@@ -72,6 +73,7 @@ build_flags =
     -D RESET_BUTTON_PIN=9
     -D AMPLIFIER_PIN=39
     -D VOLTAGE_SENSE_PIN=1
+    -D BUZZER_PIN=8
     -D CORE_DEBUG_LEVEL=2
     -D CONFIG_ARDUHAL_LOG_COLORS=1
     -Os
