--- a/platformio.ini
+++ b/platformio.ini
@@ -32,6 +32,7 @@ build_flags =
     -D I2S_MCLK_PIN=3
     -D CORE_DEBUG_LEVEL=2
     -D CONFIG_ARDUHAL_LOG_COLORS=1
+    -D CONFIG_ESP_TASK_WDT_TIMEOUT_S=15
     -Os
     ; ===== GUI (TFT + Encoder) =====
     -D GUI_ENABLED
