--- a/platformio.ini
+++ b/platformio.ini
@@ -34,6 +34,8 @@ build_flags =
     -D CONFIG_ARDUHAL_LOG_COLORS=1
     -D CONFIG_ESP_TASK_WDT_TIMEOUT_S=15
     -Os
+    ; ===== DSP Pipeline =====
+    -D DSP_ENABLED
     ; ===== GUI (TFT + Encoder) =====
     -D GUI_ENABLED
     -D LV_CONF_INCLUDE_SIMPLE
@@ -87,6 +89,8 @@ build_flags =
     -D CORE_DEBUG_LEVEL=2
     -D CONFIG_ARDUHAL_LOG_COLORS=1
     -Os
+    ; ===== DSP Pipeline =====
+    -D DSP_ENABLED
     ; ===== Wokwi compatibility: use UART serial (not USB CDC) =====
     -D ARDUINO_USB_MODE=0
     -D ARDUINO_USB_CDC_ON_BOOT=0
@@ -115,6 +119,13 @@ build_flags =
     -std=c++11
     -D UNIT_TEST
     -D NATIVE_TEST
+    -D DSP_ENABLED
+    -D DSP_MAX_STAGES=20
+    -D DSP_MAX_FIR_TAPS=256
+    -D DSP_MAX_FIR_SLOTS=2
+    -D DSP_MAX_CHANNELS=4
+    -D DSP_DEFAULT_Q=0.707f
+    -D DSP_CPU_WARN_PERCENT=80.0f
 lib_deps =
 	bblanchon/ArduinoJson@^7.4.2
 	kosme/arduinoFFT@^2.0
