feat: Audio DSP pipeline phases 2-5, ESP-DSP optimization, heap safety hardening
DSP Phases 2-5:
- Extended processing: delay, polarity, mute, compressor, crossover presets, routing matrix
- Web UI: DSP tab with stage CRUD, frequency response graph, import/export
- ESP-DSP S3 assembly: pre-built libespressif__esp-dsp.a replaces ANSI C biquad/FIR + arduinoFFT
- MQTT/HA discovery + TFT DSP menu screen and desktop carousel card
- Renamed coefficient gen (dsp_gen_*) to avoid pre-built symbol conflicts

Heap safety hardening:
- Dynamic delay pool: 76.8KB static array converted to calloc/ps_calloc (PSRAM when available)
- dsp_add_stage() rolls back on FIR/delay slot exhaustion instead of creating broken stages
- Config imports skip stages on allocation failure instead of creating slot=-1 entries
- WebSocket sends dspError message to client on addDspStage failure
- Pre-flight heap check blocks delay allocation when heap < needed + 40KB reserve
- heapCritical threshold raised from 20KB to 40KB

WDT fixes:
- OTA check task unsubscribes from WDT (TLS handshake takes 5-10s)
- IDLE0 unsubscribed from WDT (audio_cap + OTA on Core 0 starve it)

540 tests passing, RAM 51.6%, Flash 68.9%

--- a/platformio.ini
+++ b/platformio.ini
@@ -36,6 +36,14 @@ build_flags =
     -Os
     ; ===== DSP Pipeline =====
     -D DSP_ENABLED
+    ; ===== ESP-DSP pre-built library include paths (S3 assembly-optimized biquad/FIR/FFT) =====
+    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/iir/include"
+    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/fir/include"
+    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/fft/include"
+    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/common/include"
+    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/include"
+    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/hann/include"
+    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/support/include"
     ; ===== GUI (TFT + Encoder) =====
     -D GUI_ENABLED
     -D LV_CONF_INCLUDE_SIMPLE
@@ -51,7 +59,9 @@ lib_deps =
 	knolleary/PubSubClient@^2.8
 	lvgl/lvgl@^9.2.0
 	bodmer/TFT_eSPI@^2.5.43
-	kosme/arduinoFFT@^2.0
+
+; Exclude ANSI C fallback library — ESP32 uses pre-built ESP-DSP (S3 assembly)
+lib_ignore = esp_dsp_lite
 
 ; ===== Serial Monitor =====
 monitor_speed = 9600
@@ -91,6 +101,14 @@ build_flags =
     -Os
     ; ===== DSP Pipeline =====
     -D DSP_ENABLED
+    ; ===== ESP-DSP pre-built library include paths (S3 assembly-optimized biquad/FIR/FFT) =====
+    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/iir/include"
+    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/fir/include"
+    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/fft/include"
+    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/common/include"
+    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/include"
+    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/hann/include"
+    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/support/include"
     ; ===== Wokwi compatibility: use UART serial (not USB CDC) =====
     -D ARDUINO_USB_MODE=0
     -D ARDUINO_USB_CDC_ON_BOOT=0
@@ -107,7 +125,7 @@ lib_deps =
     knolleary/PubSubClient@^2.8
     lvgl/lvgl@^9.2.0
     bodmer/TFT_eSPI@^2.5.43
-    kosme/arduinoFFT@^2.0
+lib_ignore = esp_dsp_lite
 monitor_speed = 9600
 test_ignore = *
 
@@ -123,6 +141,8 @@ build_flags =
     -D DSP_MAX_STAGES=20
     -D DSP_MAX_FIR_TAPS=256
     -D DSP_MAX_FIR_SLOTS=2
+    -D DSP_MAX_DELAY_SLOTS=2
+    -D DSP_MAX_DELAY_SAMPLES=4800
     -D DSP_MAX_CHANNELS=4
     -D DSP_DEFAULT_Q=0.707f
     -D DSP_CPU_WARN_PERCENT=80.0f
