feat: ESP-DSP extended features, decouple debug toggle gating, version 1.7.1
ESP-DSP optimizations:
- Radix-4 FFT (dsps_fft4r_fc32) replaces Radix-2 for 20-27% speedup on S3
- 6 selectable FFT window types (Hann, Blackman, Blackman-Harris, Blackman-Nuttall, Nuttall, Flat-Top)
- SNR/SFDR per-ADC analysis via dsps_snr_f32/dsps_sfdr_f32
- Vector math SIMD (dsps_mulc_f32) replaces manual gain/polarity loops in DSP pipeline
- Routing matrix SIMD (dsps_mulc_f32 + dsps_add_f32) replaces per-sample inner loops
- Spectrum band edges start at 0 Hz (bin 0 included)
- Native test fallbacks in lib/esp_dsp_lite/ (23 new tests)
- MQTT HA discovery entities for FFT window select, per-ADC SNR/SFDR sensors

Debug toggle decoupling:
- Each debug sub-toggle now independently gates its own WebSocket data
- Hardware Stats toggle gates CPU/memory/storage/WiFi/ADC/crash data
- I2S Metrics toggle independently gates I2S config and runtime data
- Task Monitor already correctly gated
- Main loop broadcasts when any sub-toggle is active (not just HW Stats)
- Fixed "ADC 2 (Slave)" label to "ADC 2 (Master)" in web UI

--- a/platformio.ini
+++ b/platformio.ini
@@ -44,6 +44,17 @@ build_flags =
     -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/include"
     -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/hann/include"
     -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/support/include"
+    ; ===== ESP-DSP window function include paths =====
+    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/blackman/include"
+    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/blackman_harris/include"
+    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/blackman_nuttall/include"
+    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/nuttall/include"
+    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/flat_top/include"
+    ; ===== ESP-DSP math + dot product include paths =====
+    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/math/mulc/include"
+    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/math/mul/include"
+    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/math/add/include"
+    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/dotprod/include"
     ; ===== GUI (TFT + Encoder) =====
     -D GUI_ENABLED
     -D LV_CONF_INCLUDE_SIMPLE
@@ -109,6 +120,17 @@ build_flags =
     -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/include"
     -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/hann/include"
     -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/support/include"
+    ; ===== ESP-DSP window function include paths =====
+    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/blackman/include"
+    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/blackman_harris/include"
+    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/blackman_nuttall/include"
+    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/nuttall/include"
+    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/flat_top/include"
+    ; ===== ESP-DSP math + dot product include paths =====
+    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/math/mulc/include"
+    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/math/mul/include"
+    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/math/add/include"
+    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/dotprod/include"
     ; ===== Wokwi compatibility: use UART serial (not USB CDC) =====
     -D ARDUINO_USB_MODE=0
     -D ARDUINO_USB_CDC_ON_BOOT=0
