feat: DAC output HAL, EEPROM programming, DSP PEQ enhancements, version 1.8.0
DAC Output HAL:
- Plugin driver architecture (DacDriver abstract + registry + PCM5102A driver)
- I2S full-duplex on I2S_NUM_0 (TX+RX shared clocks), software volume
- Web UI, WebSocket, REST API integration, LittleFS settings persistence

EEPROM Programming & Diagnostics:
- AT24C02 auto-detect with ALXD format, serialize/write/erase/scan
- I2C bus recovery, ACK polling for reliable writes, page-aware programming
- Web UI programming card + debug diagnostics card with hex dump
- TFT GUI debug screen EEPROM section
- Clear state display: Programmed/Empty/Not Found
- 28 native tests (parse + serialize)

DSP Enhancements:
- 10-band parametric EQ per channel, crossover presets, routing matrix
- DSP settings export/import, bass management

25 DAC HAL tests, 28 EEPROM tests, PEQ tests

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,9 @@ framework = arduino
 ; ===== LittleFS Configuration =====
 board_build.filesystem = littlefs
 
+; ===== PSRAM Configuration (Freenove ESP32-S3 WROOM N16R8: QIO Flash + OPI PSRAM) =====
+board_build.arduino.memory_type = qio_opi
+
 ; ===== Pin Configuration (can be overridden per-environment) =====
 build_flags =
     -D LED_PIN=2
@@ -33,9 +36,15 @@ build_flags =
     -D CORE_DEBUG_LEVEL=2
     -D CONFIG_ARDUHAL_LOG_COLORS=1
     -D CONFIG_ESP_TASK_WDT_TIMEOUT_S=15
+    -DBOARD_HAS_PSRAM
     -Os
     ; ===== DSP Pipeline =====
     -D DSP_ENABLED
+    ; ===== DAC Output HAL =====
+    -D DAC_ENABLED
+    -D I2S_TX_DATA_PIN=40
+    -D DAC_I2C_SDA_PIN=41
+    -D DAC_I2C_SCL_PIN=42
     ; ===== ESP-DSP pre-built library include paths (S3 assembly-optimized biquad/FIR/FFT) =====
     -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/iir/include"
     -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/fir/include"
@@ -161,6 +170,7 @@ build_flags =
     -D NATIVE_TEST
     -D DSP_ENABLED
     -D DSP_MAX_STAGES=20
+    -D DSP_PEQ_BANDS=10
     -D DSP_MAX_FIR_TAPS=256
     -D DSP_MAX_FIR_SLOTS=2
     -D DSP_MAX_DELAY_SLOTS=2
@@ -168,6 +178,7 @@ build_flags =
     -D DSP_MAX_CHANNELS=4
     -D DSP_DEFAULT_Q=0.707f
     -D DSP_CPU_WARN_PERCENT=80.0f
+    -D DAC_ENABLED
 lib_deps =
 	bblanchon/ArduinoJson@^7.4.2
 	kosme/arduinoFFT@^2.0
