--- a/platformio.ini
+++ b/platformio.ini
@@ -22,6 +22,9 @@ board_build.filesystem = littlefs
 ; ===== PSRAM Configuration (Freenove ESP32-S3 WROOM N16R8: QIO Flash + OPI PSRAM) =====
 board_build.arduino.memory_type = qio_opi
 
+; ===== Remove board-defined USB flags so we can override to TinyUSB mode =====
+build_unflags = -DARDUINO_USB_MODE -DARDUINO_USB_CDC_ON_BOOT
+
 ; ===== Pin Configuration (can be overridden per-environment) =====
 build_flags =
     -D LED_PIN=2
@@ -64,6 +67,15 @@ build_flags =
     -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/math/mul/include"
     -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/math/add/include"
     -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/dotprod/include"
+    ; ===== USB Audio (TinyUSB UAC2 Speaker) =====
+    -D USB_AUDIO_ENABLED
+    ; Force native USB to TinyUSB mode (not built-in CDC/JTAG).
+    ; Serial still works via CH343/UART0 on the other USB port.
+    -D ARDUINO_USB_MODE=0
+    -D ARDUINO_USB_CDC_ON_BOOT=0
+    ; TinyUSB audio class headers
+    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/arduino_tinyusb/tinyusb/src"
+    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/arduino_tinyusb/include"
     ; ===== GUI (TFT + Encoder) =====
     -D GUI_ENABLED
     -D LV_CONF_INCLUDE_SIMPLE
@@ -84,7 +96,7 @@ lib_deps =
 lib_ignore = esp_dsp_lite
 
 ; ===== Serial Monitor =====
-monitor_speed = 9600
+monitor_speed = 115200
 monitor_filters = direct, esp32_exception_decoder
 
 ; ===== Upload Settings =====
@@ -157,7 +169,7 @@ lib_deps =
     lvgl/lvgl@^9.2.0
     bodmer/TFT_eSPI@^2.5.43
 lib_ignore = esp_dsp_lite
-monitor_speed = 9600
+monitor_speed = 115200
 test_ignore = *
 
 ; ===== Native Testing Environment =====
@@ -169,7 +181,7 @@ build_flags =
     -D UNIT_TEST
     -D NATIVE_TEST
     -D DSP_ENABLED
-    -D DSP_MAX_STAGES=20
+    -D DSP_MAX_STAGES=24
     -D DSP_PEQ_BANDS=10
     -D DSP_MAX_FIR_TAPS=256
     -D DSP_MAX_FIR_SLOTS=2
@@ -179,6 +191,7 @@ build_flags =
     -D DSP_DEFAULT_Q=0.707f
     -D DSP_CPU_WARN_PERCENT=80.0f
     -D DAC_ENABLED
+    -D USB_AUDIO_ENABLED
 lib_deps =
 	bblanchon/ArduinoJson@^7.4.2
 	kosme/arduinoFFT@^2.0
