fix: USB audio Windows driver compatibility via minimal BOS descriptor
Override framework's BOS descriptor that includes Microsoft OS 2.0 with
Compatible ID "WINUSB", which causes Windows to load WinUSB driver instead
of usbaudio2.sys. Our minimal BOS includes only USB 2.0 Extension capability
(required for bcdUSB=0x0210) with no MSOS2/WINUSB descriptors.

Changes:
- Add linker wrapper flag -Wl,--wrap=tud_descriptor_bos_cb to override strong symbol
- Implement __wrap_tud_descriptor_bos_cb() with 12-byte minimal BOS descriptor
- Change clock control to read-only (bmControls: 0x07 → 0x05)
- STALL SET_CUR requests for clock frequency (fixed 48kHz, not configurable)
- Change USB PID 0x4001 → 0x4002 to force Windows to re-enumerate

Fixes Windows incorrectly loading WinUSB driver and failing to recognize UAC2
audio device. Device now correctly appears as "ALX Nova Audio" speaker.

--- a/platformio.ini
+++ b/platformio.ini
@@ -75,6 +75,9 @@ build_flags =
     -D ARDUINO_USB_CDC_ON_BOOT=0
     ; TinyUSB audio class headers
     -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/arduino_tinyusb/tinyusb/src"
+    ; Wrap the BOS descriptor callback so our minimal BOS (no MSOS2/WINUSB)
+    ; overrides the framework's strong symbol in esp32-hal-tinyusb.c
+    -Wl,--wrap=tud_descriptor_bos_cb
     -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/arduino_tinyusb/include"
     ; ===== GUI (TFT + Encoder) =====
     -D GUI_ENABLED
