refactor: Reorganize project structure into professional layout
- Move 41 documentation files into categorized docs/ subdirectories
- Create docs/{user,development,hardware,planning,archive} structure
- Move build script to tools/ directory
- Delete 8 temporary build/log files
- Update .gitignore for logs and build artifacts
- Standardize naming: UPPERCASE for root, lowercase-with-dashes for docs
- Add MIGRATION.md tracking all file movements

User Documentation (docs/user/):
- Quick start, user manual, feature guides

Development Documentation (docs/development/):
- CI/CD integration, testing, release processes

Hardware Documentation (docs/hardware/):
- PCM1808 integration, hardware diagnostics

Planning Documentation (docs/planning/):
- Feature roadmaps, DSP plans, future work

Archive (docs/archive/):
- Historical summaries and completed features

Root directory now contains only essential files:
README.md, CLAUDE.md, RELEASE_NOTES.md, MIGRATION.md

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,32 @@
+# PlatformIO
 .pio
+
+# VSCode
 .vscode/.browse.c_cpp.db*
 .vscode/c_cpp_properties.json
 .vscode/launch.json
 .vscode/ipch
+
+# Temporary files
 platformio.ini
 mockup_dsp_peq.html
+
+# Build artifacts
+*.txt
+!CLAUDE.txt
+build_*.txt
+upload_*.txt
+*_log.txt
+
+# Runtime logs
+logs/
+*.log
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Editor backups
+*~
+*.swp
+*.swo
