feat: Migrate TFT driver to LovyanGFX and fix OTA TLS/WDT issues
Replace TFT_eSPI with LovyanGFX for DMA double-buffered display flush
on ST7735S. Add Sectigo intermediate cert for GitHub's updated chain,
skip cert validation when NTP hasn't synced, and suspend loopTask WDT
during TLS handshakes to prevent watchdog crashes on boot.

--- a/platformio.ini
+++ b/platformio.ini
@@ -79,13 +79,10 @@ build_flags =
     ; overrides the framework's strong symbol in esp32-hal-tinyusb.c
     -Wl,--wrap=tud_descriptor_bos_cb
     -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/arduino_tinyusb/include"
-    ; ===== GUI (TFT + Encoder) =====
+    ; ===== GUI (LovyanGFX + Encoder) =====
     -D GUI_ENABLED
     -D LV_CONF_INCLUDE_SIMPLE
     -I src/gui
-    -D USER_SETUP_LOADED
-    -D USER_SETUP_ID=0
-    -include src/gui/User_Setup.h
 
 ; ===== Library Dependencies =====
 lib_deps =
@@ -93,7 +90,7 @@ lib_deps =
 	bblanchon/ArduinoJson@^7.4.2
 	knolleary/PubSubClient@^2.8
 	lvgl/lvgl@^9.2.0
-	bodmer/TFT_eSPI@^2.5.43
+	lovyan03/LovyanGFX@^1.2.0
 
 ; Exclude ANSI C fallback library — ESP32 uses pre-built ESP-DSP (S3 assembly)
 lib_ignore = esp_dsp_lite
@@ -158,19 +155,17 @@ build_flags =
     ; ===== Wokwi compatibility: use UART serial (not USB CDC) =====
     -D ARDUINO_USB_MODE=0
     -D ARDUINO_USB_CDC_ON_BOOT=0
-    ; ===== GUI (TFT + Encoder) — Wokwi ILI9341 =====
+    ; ===== GUI (LovyanGFX + Encoder) — Wokwi ILI9341 =====
     -D GUI_ENABLED
     -D LV_CONF_INCLUDE_SIMPLE
     -I src/gui
-    -D USER_SETUP_LOADED
-    -D USER_SETUP_ID=0
-    -include src/gui/User_Setup_Wokwi.h
+    -D WOKWI_BUILD
 lib_deps =
     links2004/WebSockets@^2.7.2
     bblanchon/ArduinoJson@^7.4.2
     knolleary/PubSubClient@^2.8
     lvgl/lvgl@^9.2.0
-    bodmer/TFT_eSPI@^2.5.43
+    lovyan03/LovyanGFX@^1.2.0
 lib_ignore = esp_dsp_lite
 monitor_speed = 115200
 test_ignore = *
