fix: Redirect MbedTLS allocations to PSRAM to fix OTA version check TLS failure
OTA version checks failed with HTTP -1 at ~35KB free heap because MbedTLS
I/O buffers (~32KB) competed with I2S DMA for scarce internal SRAM. Instead
of tearing down audio during checks, use GCC --wrap to redirect all MbedTLS
allocations to PSRAM via heap_caps_calloc(MALLOC_CAP_SPIRAM). Audio runs
uninterrupted during OTA checks. Also includes OTA stream-parse optimization,
HTTP fallback for downloads, and I2S driver teardown safety for OTA downloads.

--- a/platformio.ini
+++ b/platformio.ini
@@ -78,6 +78,10 @@ build_flags =
     ; Wrap the BOS descriptor callback so our minimal BOS (no MSOS2/WINUSB)
     ; overrides the framework's strong symbol in esp32-hal-tinyusb.c
     -Wl,--wrap=tud_descriptor_bos_cb
+    ; Redirect MbedTLS allocations to PSRAM so TLS handshakes don't compete
+    ; with I2S DMA buffers for scarce internal SRAM (~32KB I/O buffers)
+    -Wl,--wrap=esp_mbedtls_mem_calloc
+    -Wl,--wrap=esp_mbedtls_mem_free
     -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/arduino_tinyusb/include"
     ; ===== GUI (LovyanGFX + Encoder) =====
     -D GUI_ENABLED
