chore: pin platform version, fix display rotation, update build config
- Pin espressif32@6.9.0 and toolchain-xtensa-esp32s3@12.2.0+20230208 for reproducible builds
- Fix lgfx_config.h offset_rotation to 2 (panel mounted inverted, 180° correction)
- Reformat platformio.ini build_flags to tab-indented style
- Update .vscode settings to use built-in PIO core/Python
- Add pioarduino VSCode extension recommendation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "platformio-ide.useBuiltinPIOCore": false,
-    "platformio-ide.useBuiltinPython": false
+    "platformio-ide.useBuiltinPIOCore": true,
+    "platformio-ide.useBuiltinPython": true
 }
