--- a/platformio.ini
+++ b/platformio.ini
@@ -12,191 +12,147 @@
 default_envs = esp32-s3-devkitm-1
 
 [env:esp32-s3-devkitm-1]
-platform = espressif32
+platform = espressif32@6.9.0
 board = esp32-s3-devkitm-1
 framework = arduino
-
-; ===== LittleFS Configuration =====
 board_build.filesystem = littlefs
-
-; ===== PSRAM Configuration (Freenove ESP32-S3 WROOM N16R8: QIO Flash + OPI PSRAM) =====
 board_build.arduino.memory_type = qio_opi
-
-; ===== Remove board-defined USB flags so we can override to TinyUSB mode =====
 build_unflags = -DARDUINO_USB_MODE -DARDUINO_USB_CDC_ON_BOOT
-
-; ===== Pin Configuration (can be overridden per-environment) =====
-build_flags =
-    -D LED_PIN=2
-    -D RESET_BUTTON_PIN=15
-    -D AMPLIFIER_PIN=4
-    -D BUZZER_PIN=8
-    -D I2S_BCK_PIN=16
-    -D I2S_DOUT_PIN=17
-    -D I2S_DOUT2_PIN=9
-    -D I2S_LRC_PIN=18
-    -D I2S_MCLK_PIN=3
-    -D CORE_DEBUG_LEVEL=2
-    -D CONFIG_ARDUHAL_LOG_COLORS=1
-    -D CONFIG_ESP_TASK_WDT_TIMEOUT_S=15
-    -DBOARD_HAS_PSRAM
-    -Os
-    ; ===== DSP Pipeline =====
-    -D DSP_ENABLED
-    ; ===== DAC Output HAL =====
-    -D DAC_ENABLED
-    -D I2S_TX_DATA_PIN=40
-    -D DAC_I2C_SDA_PIN=41
-    -D DAC_I2C_SCL_PIN=42
-    ; ===== ESP-DSP pre-built library include paths (S3 assembly-optimized biquad/FIR/FFT) =====
-    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/iir/include"
-    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/fir/include"
-    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/fft/include"
-    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/common/include"
-    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/include"
-    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/hann/include"
-    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/support/include"
-    ; ===== ESP-DSP window function include paths =====
-    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/blackman/include"
-    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/blackman_harris/include"
-    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/blackman_nuttall/include"
-    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/nuttall/include"
-    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/flat_top/include"
-    ; ===== ESP-DSP math + dot product include paths =====
-    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/math/mulc/include"
-    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/math/mul/include"
-    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/math/add/include"
-    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/dotprod/include"
-    ; ===== USB Audio (TinyUSB UAC2 Speaker) =====
-    -D USB_AUDIO_ENABLED
-    ; Force native USB to TinyUSB mode (not built-in CDC/JTAG).
-    ; Serial still works via CH343/UART0 on the other USB port.
-    -D ARDUINO_USB_MODE=0
-    -D ARDUINO_USB_CDC_ON_BOOT=0
-    ; TinyUSB audio class headers
-    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/arduino_tinyusb/tinyusb/src"
-    ; Wrap the BOS descriptor callback so our minimal BOS (no MSOS2/WINUSB)
-    ; overrides the framework's strong symbol in esp32-hal-tinyusb.c
-    -Wl,--wrap=tud_descriptor_bos_cb
-    ; Redirect MbedTLS allocations to PSRAM so TLS handshakes don't compete
-    ; with I2S DMA buffers for scarce internal SRAM (~32KB I/O buffers)
-    -Wl,--wrap=esp_mbedtls_mem_calloc
-    -Wl,--wrap=esp_mbedtls_mem_free
-    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/arduino_tinyusb/include"
-    ; ===== GUI (LovyanGFX + Encoder) =====
-    -D GUI_ENABLED
-    -D LV_CONF_INCLUDE_SIMPLE
-    -I src/gui
-
-; ===== Library Dependencies =====
-lib_deps =
+build_flags = 
+	-D LED_PIN=2
+	-D RESET_BUTTON_PIN=15
+	-D AMPLIFIER_PIN=4
+	-D BUZZER_PIN=8
+	-D I2S_BCK_PIN=16
+	-D I2S_DOUT_PIN=17
+	-D I2S_DOUT2_PIN=9
+	-D I2S_LRC_PIN=18
+	-D I2S_MCLK_PIN=3
+	-D CORE_DEBUG_LEVEL=2
+	-D CONFIG_ARDUHAL_LOG_COLORS=1
+	-D CONFIG_ESP_TASK_WDT_TIMEOUT_S=15
+	-DBOARD_HAS_PSRAM
+	-Os
+	-D DSP_ENABLED
+	-D DAC_ENABLED
+	-D I2S_TX_DATA_PIN=40
+	-D DAC_I2C_SDA_PIN=41
+	-D DAC_I2C_SCL_PIN=42
+	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/iir/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/fir/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/fft/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/common/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/hann/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/support/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/blackman/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/blackman_harris/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/blackman_nuttall/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/nuttall/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/flat_top/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/math/mulc/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/math/mul/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/math/add/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/dotprod/include"
+	-D USB_AUDIO_ENABLED
+	-D ARDUINO_USB_MODE=0
+	-D ARDUINO_USB_CDC_ON_BOOT=0
+	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/arduino_tinyusb/tinyusb/src"
+	-Wl,--wrap=tud_descriptor_bos_cb
+	-Wl,--wrap=esp_mbedtls_mem_calloc
+	-Wl,--wrap=esp_mbedtls_mem_free
+	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/arduino_tinyusb/include"
+	-D GUI_ENABLED
+	-D LV_CONF_INCLUDE_SIMPLE
+	-I src/gui
+lib_deps = 
 	links2004/WebSockets@^2.7.2
 	bblanchon/ArduinoJson@^7.4.2
 	knolleary/PubSubClient@^2.8
 	lvgl/lvgl@^9.2.0
 	lovyan03/LovyanGFX@^1.2.0
-
-; Exclude ANSI C fallback library — ESP32 uses pre-built ESP-DSP (S3 assembly)
 lib_ignore = esp_dsp_lite
-
-; ===== Serial Monitor =====
 monitor_speed = 115200
 monitor_filters = direct, esp32_exception_decoder
-
-; ===== Upload Settings =====
-; upload_speed = 921600
-
-; ===== Partition Table (optional - use if needing more space) =====
-; board_build.partitions = huge_app.csv
-
-; ===== Test Configuration =====
-; Ignore all unit tests for ESP32 (tests are designed for native environment)
 test_ignore = *
+platform_packages = espressif/toolchain-xtensa-esp32s3@12.2.0+20230208
 
-; ===== Wokwi Simulation Environment =====
-; Uses ILI9341 driver (Wokwi built-in) instead of ST7735S
-; Build: pio run -e esp32-s3-wokwi
 [env:esp32-s3-wokwi]
-platform = espressif32
+platform = espressif32@6.9.0
 board = esp32-s3-devkitc-1
 framework = arduino
 board_build.filesystem = littlefs
 board_build.flash_mode = dio
-build_flags =
-    -D LED_PIN=38
-    -D RESET_BUTTON_PIN=9
-    -D AMPLIFIER_PIN=39
-    -D BUZZER_PIN=8
-    -D I2S_BCK_PIN=16
-    -D I2S_DOUT_PIN=17
-    -D I2S_DOUT2_PIN=19
-    -D I2S_LRC_PIN=18
-    -D I2S_MCLK_PIN=3
-    -D CORE_DEBUG_LEVEL=2
-    -D CONFIG_ARDUHAL_LOG_COLORS=1
-    -Os
-    ; ===== DSP Pipeline =====
-    -D DSP_ENABLED
-    ; ===== ESP-DSP pre-built library include paths (S3 assembly-optimized biquad/FIR/FFT) =====
-    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/iir/include"
-    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/fir/include"
-    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/fft/include"
-    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/common/include"
-    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/include"
-    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/hann/include"
-    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/support/include"
-    ; ===== ESP-DSP window function include paths =====
-    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/blackman/include"
-    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/blackman_harris/include"
-    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/blackman_nuttall/include"
-    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/nuttall/include"
-    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/flat_top/include"
-    ; ===== ESP-DSP math + dot product include paths =====
-    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/math/mulc/include"
-    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/math/mul/include"
-    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/math/add/include"
-    -I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/dotprod/include"
-    ; ===== Wokwi compatibility: use UART serial (not USB CDC) =====
-    -D ARDUINO_USB_MODE=0
-    -D ARDUINO_USB_CDC_ON_BOOT=0
-    ; ===== GUI (LovyanGFX + Encoder) — Wokwi ILI9341 =====
-    -D GUI_ENABLED
-    -D LV_CONF_INCLUDE_SIMPLE
-    -I src/gui
-    -D WOKWI_BUILD
-lib_deps =
-    links2004/WebSockets@^2.7.2
-    bblanchon/ArduinoJson@^7.4.2
-    knolleary/PubSubClient@^2.8
-    lvgl/lvgl@^9.2.0
-    lovyan03/LovyanGFX@^1.2.0
+build_flags = 
+	-D LED_PIN=38
+	-D RESET_BUTTON_PIN=9
+	-D AMPLIFIER_PIN=39
+	-D BUZZER_PIN=8
+	-D I2S_BCK_PIN=16
+	-D I2S_DOUT_PIN=17
+	-D I2S_DOUT2_PIN=19
+	-D I2S_LRC_PIN=18
+	-D I2S_MCLK_PIN=3
+	-D CORE_DEBUG_LEVEL=2
+	-D CONFIG_ARDUHAL_LOG_COLORS=1
+	-Os
+	-D DSP_ENABLED
+	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/iir/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/fir/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/fft/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/common/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/hann/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/support/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/blackman/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/blackman_harris/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/blackman_nuttall/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/nuttall/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/flat_top/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/math/mulc/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/math/mul/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/math/add/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/dotprod/include"
+	-D ARDUINO_USB_MODE=0
+	-D ARDUINO_USB_CDC_ON_BOOT=0
+	-D GUI_ENABLED
+	-D LV_CONF_INCLUDE_SIMPLE
+	-I src/gui
+	-D WOKWI_BUILD
+lib_deps = 
+	links2004/WebSockets@^2.7.2
+	bblanchon/ArduinoJson@^7.4.2
+	knolleary/PubSubClient@^2.8
+	lvgl/lvgl@^9.2.0
+	lovyan03/LovyanGFX@^1.2.0
 lib_ignore = esp_dsp_lite
 monitor_speed = 115200
 test_ignore = *
+platform_packages = espressif/toolchain-xtensa-esp32s3@12.2.0+20230208
 
-; ===== Native Testing Environment =====
 [env:native]
 platform = native
 test_framework = unity
-build_flags =
-    -std=c++11
-    -D UNIT_TEST
-    -D NATIVE_TEST
-    -D DSP_ENABLED
-    -D DSP_MAX_STAGES=24
-    -D DSP_PEQ_BANDS=10
-    -D DSP_MAX_FIR_TAPS=256
-    -D DSP_MAX_FIR_SLOTS=2
-    -D DSP_MAX_DELAY_SLOTS=2
-    -D DSP_MAX_DELAY_SAMPLES=4800
-    -D DSP_MAX_CHANNELS=4
-    -D DSP_DEFAULT_Q=0.707f
-    -D DSP_CPU_WARN_PERCENT=80.0f
-    -D DAC_ENABLED
-    -D USB_AUDIO_ENABLED
-lib_deps =
+build_flags = 
+	-std=c++11
+	-D UNIT_TEST
+	-D NATIVE_TEST
+	-D DSP_ENABLED
+	-D DSP_MAX_STAGES=24
+	-D DSP_PEQ_BANDS=10
+	-D DSP_MAX_FIR_TAPS=256
+	-D DSP_MAX_FIR_SLOTS=2
+	-D DSP_MAX_DELAY_SLOTS=2
+	-D DSP_MAX_DELAY_SAMPLES=4800
+	-D DSP_MAX_CHANNELS=4
+	-D DSP_DEFAULT_Q=0.707f
+	-D DSP_CPU_WARN_PERCENT=80.0f
+	-D DAC_ENABLED
+	-D USB_AUDIO_ENABLED
+lib_deps = 
 	bblanchon/ArduinoJson@^7.4.2
 	kosme/arduinoFFT@^2.0
 lib_compat_mode = off
 test_ignore = test_mocks
 test_build_src = no
+platform_packages = espressif/toolchain-xtensa-esp32s3@12.2.0+20230208
