feat: migrate to pioarduino IDF5 platform and Arduino-ESP32 3.x API
- Switch to pioarduino platform (IDF5 / Arduino-ESP32 3.x) for improved
  ESP32-S3 support and newer ESP-IDF features
- Migrate I2S driver: legacy driver/i2s.h → IDF5 driver/i2s_std.h with
  channel handles (_i2s0_rx, _i2s0_tx, _i2s1_rx) replacing port numbers
- Extract I2S TX management into i2s_audio.cpp: new i2s_audio_enable_tx(),
  i2s_audio_disable_tx(), i2s_audio_write_tx() API; dac_hal.cpp delegates
- Migrate LEDC API: ledcSetup+ledcAttachPin → ledcAttach (pin-based),
  ledcDetachPin → ledcDetach across buzzer, GUI backlight, and signal gen
- Fix task_monitor: use vTaskCoreAffinityGet (IDF5 bitmask) with version
  guard, falling back to xTaskGetAffinity on IDF4
- Refactor platformio.ini: shared [idf5_includes] section eliminates
  duplicate ESP-DSP include paths across environments
- Update Arduino.h mock to cover both 2.x and 3.x LEDC API signatures

--- a/platformio.ini
+++ b/platformio.ini
@@ -7,18 +7,44 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+;
+; ESP-IDF version: 5.5.2 via pioarduino platform v55.03.37
+; Arduino-ESP32:   3.3.7
+; When a pioarduino release with IDF 5.5.3 is available, bump the
+; platform URL to the new version tag.
 
 [platformio]
 default_envs = esp32-s3-devkitm-1
 
+; Shared include paths for ESP-DSP and TinyUSB (pioarduino framework-arduinoespressif32-libs)
+[idf5_includes]
+build_flags =
+	-I "${platformio.packages_dir}/framework-arduinoespressif32-libs/esp32s3/include/espressif__esp-dsp/modules/iir/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32-libs/esp32s3/include/espressif__esp-dsp/modules/fir/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32-libs/esp32s3/include/espressif__esp-dsp/modules/fft/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32-libs/esp32s3/include/espressif__esp-dsp/modules/common/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32-libs/esp32s3/include/espressif__esp-dsp/modules/windows/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32-libs/esp32s3/include/espressif__esp-dsp/modules/windows/hann/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32-libs/esp32s3/include/espressif__esp-dsp/modules/support/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32-libs/esp32s3/include/espressif__esp-dsp/modules/windows/blackman/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32-libs/esp32s3/include/espressif__esp-dsp/modules/windows/blackman_harris/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32-libs/esp32s3/include/espressif__esp-dsp/modules/windows/blackman_nuttall/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32-libs/esp32s3/include/espressif__esp-dsp/modules/windows/nuttall/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32-libs/esp32s3/include/espressif__esp-dsp/modules/windows/flat_top/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32-libs/esp32s3/include/espressif__esp-dsp/modules/math/mulc/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32-libs/esp32s3/include/espressif__esp-dsp/modules/math/mul/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32-libs/esp32s3/include/espressif__esp-dsp/modules/math/add/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32-libs/esp32s3/include/espressif__esp-dsp/modules/dotprod/include"
+
 [env:esp32-s3-devkitm-1]
-platform = espressif32@6.9.0
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/55.03.37/platform-espressif32.zip
 board = esp32-s3-devkitm-1
 framework = arduino
 board_build.filesystem = littlefs
 board_build.arduino.memory_type = qio_opi
 build_unflags = -DARDUINO_USB_MODE -DARDUINO_USB_CDC_ON_BOOT
-build_flags = 
+build_flags =
+	${idf5_includes.build_flags}
 	-D LED_PIN=2
 	-D RESET_BUTTON_PIN=15
 	-D AMPLIFIER_PIN=4
@@ -38,34 +64,18 @@ build_flags =
 	-D I2S_TX_DATA_PIN=40
 	-D DAC_I2C_SDA_PIN=41
 	-D DAC_I2C_SCL_PIN=42
-	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/iir/include"
-	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/fir/include"
-	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/fft/include"
-	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/common/include"
-	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/include"
-	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/hann/include"
-	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/support/include"
-	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/blackman/include"
-	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/blackman_harris/include"
-	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/blackman_nuttall/include"
-	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/nuttall/include"
-	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/flat_top/include"
-	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/math/mulc/include"
-	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/math/mul/include"
-	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/math/add/include"
-	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/dotprod/include"
 	-D USB_AUDIO_ENABLED
 	-D ARDUINO_USB_MODE=0
 	-D ARDUINO_USB_CDC_ON_BOOT=0
-	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/arduino_tinyusb/tinyusb/src"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32-libs/esp32s3/include/arduino_tinyusb/tinyusb/src"
 	-Wl,--wrap=tud_descriptor_bos_cb
 	-Wl,--wrap=esp_mbedtls_mem_calloc
 	-Wl,--wrap=esp_mbedtls_mem_free
-	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/arduino_tinyusb/include"
+	-I "${platformio.packages_dir}/framework-arduinoespressif32-libs/esp32s3/include/arduino_tinyusb/include"
 	-D GUI_ENABLED
 	-D LV_CONF_INCLUDE_SIMPLE
 	-I src/gui
-lib_deps = 
+lib_deps =
 	links2004/WebSockets@^2.7.2
 	bblanchon/ArduinoJson@^7.4.2
 	knolleary/PubSubClient@^2.8
@@ -75,15 +85,15 @@ lib_ignore = esp_dsp_lite
 monitor_speed = 115200
 monitor_filters = direct, esp32_exception_decoder
 test_ignore = *
-platform_packages = espressif/toolchain-xtensa-esp32s3@12.2.0+20230208
 
 [env:esp32-s3-wokwi]
-platform = espressif32@6.9.0
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/55.03.37/platform-espressif32.zip
 board = esp32-s3-devkitc-1
 framework = arduino
 board_build.filesystem = littlefs
 board_build.flash_mode = dio
-build_flags = 
+build_flags =
+	${idf5_includes.build_flags}
 	-D LED_PIN=38
 	-D RESET_BUTTON_PIN=9
 	-D AMPLIFIER_PIN=39
@@ -97,29 +107,13 @@ build_flags =
 	-D CONFIG_ARDUHAL_LOG_COLORS=1
 	-Os
 	-D DSP_ENABLED
-	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/iir/include"
-	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/fir/include"
-	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/fft/include"
-	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/common/include"
-	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/include"
-	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/hann/include"
-	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/support/include"
-	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/blackman/include"
-	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/blackman_harris/include"
-	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/blackman_nuttall/include"
-	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/nuttall/include"
-	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/windows/flat_top/include"
-	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/math/mulc/include"
-	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/math/mul/include"
-	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/math/add/include"
-	-I "${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32s3/include/espressif__esp-dsp/modules/dotprod/include"
 	-D ARDUINO_USB_MODE=0
 	-D ARDUINO_USB_CDC_ON_BOOT=0
 	-D GUI_ENABLED
 	-D LV_CONF_INCLUDE_SIMPLE
 	-I src/gui
 	-D WOKWI_BUILD
-lib_deps = 
+lib_deps =
 	links2004/WebSockets@^2.7.2
 	bblanchon/ArduinoJson@^7.4.2
 	knolleary/PubSubClient@^2.8
@@ -128,12 +122,11 @@ lib_deps =
 lib_ignore = esp_dsp_lite
 monitor_speed = 115200
 test_ignore = *
-platform_packages = espressif/toolchain-xtensa-esp32s3@12.2.0+20230208
 
 [env:native]
 platform = native
 test_framework = unity
-build_flags = 
+build_flags =
 	-std=c++11
 	-D UNIT_TEST
 	-D NATIVE_TEST
@@ -149,10 +142,9 @@ build_flags =
 	-D DSP_CPU_WARN_PERCENT=80.0f
 	-D DAC_ENABLED
 	-D USB_AUDIO_ENABLED
-lib_deps = 
+lib_deps =
 	bblanchon/ArduinoJson@^7.4.2
 	kosme/arduinoFFT@^2.0
 lib_compat_mode = off
 test_ignore = test_mocks
 test_build_src = no
-platform_packages = espressif/toolchain-xtensa-esp32s3@12.2.0+20230208
