fix: use esp_task_wdt_reconfigure for IDF5 TWDT timeout
Use esp_task_wdt_reconfigure() at runtime instead of the
CONFIG_ESP_TASK_WDT_TIMEOUT_S build flag, which has no effect on the
pre-built Arduino IDF5 .a files. Set idle_core_mask=0 to atomically
remove IDLE0 monitoring without corrupting the WDT subscriber linked
list in IDF5.5. Also update PlatformIO IDE settings and release notes.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
-    "platformio-ide.useBuiltinPIOCore": true,
-    "platformio-ide.useBuiltinPython": true
+    "platformio-ide.useBuiltinPIOCore": false,
+    "platformio-ide.useBuiltinPython": false,
+    "platformio-ide.customPATH": "C:\\Users\\Necrosis\\.platformio\\penv\\Scripts",
+    "terminal.integrated.env.windows": {
+        "PYTHONIOENCODING": "utf-8"
+    }
 }
