build: auto-rebuild web_pages_gz.cpp via PlatformIO pre-build hook

--- a/platformio.ini
+++ b/platformio.ini
@@ -42,6 +42,7 @@ board = esp32-s3-devkitm-1
 framework = arduino
 board_build.filesystem = littlefs
 board_build.arduino.memory_type = qio_opi
+extra_scripts = pre:tools/pre_build_web.py
 build_unflags = -DARDUINO_USB_MODE -DARDUINO_USB_CDC_ON_BOOT
 build_flags =
 	${idf5_includes.build_flags}
@@ -91,6 +92,7 @@ board = esp32-s3-devkitc-1
 framework = arduino
 board_build.filesystem = littlefs
 board_build.flash_mode = dio
+extra_scripts = pre:tools/pre_build_web.py
 build_flags =
 	${idf5_includes.build_flags}
 	-D LED_PIN=38
