perf: heap memory optimization — reduce internal SRAM usage by ~28 KB
- GUI task stack → PSRAM via xTaskCreateStaticPinnedToCore (-16 KB)
- Debug log ring → PSRAM via heap_caps_calloc(SPIRAM) (-4 KB)
- I2S DMA buffers: I2S_DMA_BUF_COUNT 8→6 (-4 KB)
- MQTT: all String fields → static char[] buffers; mqttTopic()/mqttPubInt/Float/Str/Bool() helpers
- HA Discovery: table-driven with reusable _jsonBuf (was ~80 separate String allocs)
- AppState: 16 String fields → char[] arrays with setCharField() for assignment
- WebSocket: _wsBuf PSRAM pool + wsBroadcastJson()/wsSendJson() helpers
- Settings: line-by-line readBytesUntil() (was String lines[35])
- DSP API: PsramAllocator for ArduinoJson documents
- Signal generator: lazy init (only when first enabled)
- OTA SHA256: char hashStr[65] + snprintf (was String+= loop)
- Heap budget regression tests added (test_heap_budget)

--- a/platformio.ini
+++ b/platformio.ini
@@ -42,6 +42,7 @@ board = esp32-s3-devkitm-1
 framework = arduino
 board_build.filesystem = littlefs
 board_build.arduino.memory_type = qio_opi
+board_build.sdkconfig = sdkconfig.defaults
 extra_scripts = pre:tools/pre_build_web.py
 build_unflags = -DARDUINO_USB_MODE -DARDUINO_USB_CDC_ON_BOOT
 build_flags =
